# DnaMutationQuantifier

./: DnaMutationQuantifier.sln  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: build_and_push_anaconda.yml
DnaMutationQuantifier_CLI/: Class1.cs
DnaMutationQuantifier_Python/: DnaMutationQuantifier_Python.py  DnaMutationQuantifier_Python.pyproj
pytest/: test.py
src/dna_mutation_quantifier/: analysis.py  calibration.py  core.py  ratio_to_substitution_matrix.tsv  run.py  sanger.py
